minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graceful-deployment
  labels:
    app: graceful
spec:
  replicas: 2
  selector:
    matchLabels:
      app: graceful
  template:
    metadata:
      labels:
        app: graceful
    spec:
      containers:
      - name: graceful
        image: graceful-go-server
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: graceful-service
spec:
  selector:
    app: graceful
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-deployment
  labels:
    app: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
      - name: default
        image: default-go-server
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: default-service
spec:
  selector:
    app: default
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /graceful(/|$)(.*)
            backend:
              service:
                name: graceful-service
                port:
                  number: 8081
          - pathType: Prefix
            path: /default(/|$)(.*)
            backend:
              service:
                name: default-service
                port:
                  number: 8081
---
